@@ -7,7 +7,7 @@ class TestPCreateCommand(unittest.TestCase):
 
     def out(self, msg):
         self.out_.write(msg)
-        
+
     def _getTargetClass(self):
         from pyramid.scripts.pcreate import PCreateCommand
         return PCreateCommand
@@ -25,7 +25,7 @@ class TestPCreateCommand(unittest.TestCase):
         self.assertEqual(result, 0)
         out = self.out_.getvalue()
         self.assertTrue(out.startswith('Available scaffolds'))
-        
+
     def test_run_show_scaffolds_none_exist(self):
         cmd = self._makeOne('-l')
         cmd.scaffolds = []
@@ -33,7 +33,7 @@ class TestPCreateCommand(unittest.TestCase):
         self.assertEqual(result, 0)
         out = self.out_.getvalue()
         self.assertTrue(out.startswith('No scaffolds available'))
-        
+
     def test_run_no_scaffold_name(self):
         cmd = self._makeOne()
         result = cmd.run()
@@ -61,6 +61,7 @@ class TestPCreateCommand(unittest.TestCase):
         cmd = self._makeOne('-s', 'dummy', 'Distro')
         scaffold = DummyScaffold('dummy')
         cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.1")
         result = cmd.run()
         self.assertEqual(result, 0)
         self.assertEqual(
@@ -69,14 +70,17 @@ class TestPCreateCommand(unittest.TestCase):
             )
         self.assertEqual(
             scaffold.vars,
-            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro'})
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.1', 'pyramid_docs_branch':'0.1-branch'})
 
     def test_known_scaffold_absolute_path(self):
         import os
         path = os.path.abspath('Distro')
         cmd = self._makeOne('-s', 'dummy', path)
+        cmd.pyramid_dist = DummyDist("0.1")
         scaffold = DummyScaffold('dummy')
         cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.1")
         result = cmd.run()
         self.assertEqual(result, 0)
         self.assertEqual(
@@ -85,7 +89,8 @@ class TestPCreateCommand(unittest.TestCase):
             )
         self.assertEqual(
             scaffold.vars,
-            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro'})
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.1', 'pyramid_docs_branch':'0.1-branch'})
 
     def test_known_scaffold_multiple_rendered(self):
         import os
@@ -93,6 +98,7 @@ class TestPCreateCommand(unittest.TestCase):
         scaffold1 = DummyScaffold('dummy1')
         scaffold2 = DummyScaffold('dummy2')
         cmd.scaffolds = [scaffold1, scaffold2]
+        cmd.pyramid_dist = DummyDist("0.1")
         result = cmd.run()
         self.assertEqual(result, 0)
         self.assertEqual(
@@ -101,20 +107,23 @@ class TestPCreateCommand(unittest.TestCase):
             )
         self.assertEqual(
             scaffold1.vars,
-            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro'})
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.1', 'pyramid_docs_branch':'0.1-branch'})
         self.assertEqual(
             scaffold2.output_dir,
             os.path.normpath(os.path.join(os.getcwd(), 'Distro'))
             )
         self.assertEqual(
             scaffold2.vars,
-            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro'})
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.1', 'pyramid_docs_branch':'0.1-branch'})
 
     def test_known_scaffold_with_path_as_project_target_rendered(self):
         import os
         cmd = self._makeOne('-s', 'dummy', '/tmp/foo/Distro/')
         scaffold = DummyScaffold('dummy')
         cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.1")
         result = cmd.run()
         self.assertEqual(result, 0)
         self.assertEqual(
@@ -123,8 +132,73 @@ class TestPCreateCommand(unittest.TestCase):
             )
         self.assertEqual(
             scaffold.vars,
-            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro'})
-        
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.1', 'pyramid_docs_branch':'0.1-branch'})
+
+
+    def test_scaffold_with_prod_pyramid_version(self):
+        cmd = self._makeOne('-s', 'dummy', 'Distro')
+        scaffold = DummyScaffold('dummy')
+        cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.2")
+        result = cmd.run()
+        self.assertEqual(result, 0)
+        self.assertEqual(
+            scaffold.vars,
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.2', 'pyramid_docs_branch':'0.2-branch'})
+
+    def test_scaffold_with_prod_pyramid_long_version(self):
+        cmd = self._makeOne('-s', 'dummy', 'Distro')
+        scaffold = DummyScaffold('dummy')
+        cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.2.1")
+        result = cmd.run()
+        self.assertEqual(result, 0)
+        self.assertEqual(
+            scaffold.vars,
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.2.1', 'pyramid_docs_branch':'0.2-branch'})
+
+    def test_scaffold_with_prod_pyramid_unparsable_version(self):
+        cmd = self._makeOne('-s', 'dummy', 'Distro')
+        scaffold = DummyScaffold('dummy')
+        cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("abc")
+        result = cmd.run()
+        self.assertEqual(result, 0)
+        self.assertEqual(
+            scaffold.vars,
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': 'abc', 'pyramid_docs_branch':'latest'})
+
+    def test_scaffold_with_dev_pyramid_version(self):
+        cmd = self._makeOne('-s', 'dummy', 'Distro')
+        scaffold = DummyScaffold('dummy')
+        cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.12dev")
+        result = cmd.run()
+        self.assertEqual(result, 0)
+        self.assertEqual(
+            scaffold.vars,
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.12dev',
+             'pyramid_docs_branch': '0.12-branch'})
+
+    def test_scaffold_with_dev_pyramid_long_version(self):
+        cmd = self._makeOne('-s', 'dummy', 'Distro')
+        scaffold = DummyScaffold('dummy')
+        cmd.scaffolds = [scaffold]
+        cmd.pyramid_dist = DummyDist("0.10.1dev")
+        result = cmd.run()
+        self.assertEqual(result, 0)
+        self.assertEqual(
+            scaffold.vars,
+            {'project': 'Distro', 'egg': 'Distro', 'package': 'distro',
+             'pyramid_version': '0.10.1dev',
+             'pyramid_docs_branch': '0.10-branch'})
+
+
 class Test_main(unittest.TestCase):
     def _callFUT(self, argv):
         from pyramid.scripts.pcreate import main
@@ -142,4 +216,7 @@ class DummyScaffold(object):
         self.command = command
         self.output_dir = output_dir
         self.vars = vars
-        
+
+class DummyDist(object):
+    def __init__(self, version):
+        self.version = version
